--- a/css/main-style.css
+++ b/css/main-style.css
@@ -157,10 +157,21 @@ a.um_forum {
     vertical-align: bottom;
 }
 
+.main_nav {
+    position: relative;
+}
+
 .main_nav>li>a {
     vertical-align: middle;
     line-height: 40px;
+    font-family: "Raleway-Bold";
     text-transform: uppercase;
+    font-size: 15px;
+    color: #4B69A5;
+}
+
+.main_nav>li>a.active {
+    color: black;
 }
 
 .logo {
@@ -188,6 +199,149 @@ a.um_forum {
 
 #user_icon {
     vertical-align: bottom;
+}
+
+.pretraga {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    border: none;
+    display: inline-block;
+    width: 115px;
+    line-height: 60px;
+    height: 60px;
+    background: transparent;
+}
+
+.pretraga:focus {
+    border-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+}
+
+.pretraga::-webkit-input-placeholder,
+.pretraga::-moz-placeholder,
+.pretraga:-ms-input-placeholder {
+    color: black;
+}
+
+.search_bar {
+    display: inline-block;
+    float: right;
+    right: 70px;
+    position: absolute;
+    z-index: 9999;
+}
+
+.search-icon {
+    color: #4B69A5;
+    height: 70px;
+    line-height: 70px;
+    font-size: 20px;
+}
+
+.dropdown-toggle {
+    display: inline-block;
+    float: right;
+    height: 70px;
+    line-height: 70px;
+    font-size: 20px;
+    color: black;
+    margin-left: 35px;
+    margin-right: 15px;
+    z-index: 9999;
+    position: absolute;
+    right: 0;
+}
+
+
+/* - Megamenu - */
+
+.navbar-nav>li>.dropdown-menu {
+    margin-top: 20px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.navbar-default .navbar-nav>li>a {
+    width: 200px;
+    font-weight: bold;
+}
+
+.mega-dropdown {
+    width: 100%;
+    list-style: none;
+}
+
+.mega-dropdown-menu {
+    padding: 20px 0px;
+    width: 100%;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    padding: 70px 0px 20px;
+    */
+}
+
+.dropdown-menu {
+    margin-top: 5px;
+    border-radius: 0px;
+    background: #272727;
+}
+
+.mega-dropdown-menu:after {
+    display: none;
+}
+
+.mega-dropdown-menu>li>ul {
+    padding: 0;
+    margin: 0;
+}
+
+.mega-dropdown-menu>li>ul>li {
+    list-style: none;
+}
+
+.mega-dropdown-menu>li>ul>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.428571429;
+    color: #999;
+    white-space: normal;
+}
+
+.mega-dropdown-menu>li ul>li>a:hover,
+.mega-dropdown-menu>li ul>li>a:focus {
+    text-decoration: none;
+    color: #444;
+    background-color: #f5f5f5;
+}
+
+.mega-dropdown-menu .dropdown-header {
+    color: #428bca;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.top_divider {
+    height: 1px;
+    margin: -5px 15px 20px;
+    overflow: hidden;
+    background-color: rgba(229, 229, 229, 0.1);
+}
+
+.otvoren {
+    color: white;
+}
+
+.otvoren:focus {
+    color: white;
+}
+
+.dropdown-toggle.otvoren>i {
+    content: "f00d";
 }
 
 
