--- a/css/main-style.css
+++ b/css/main-style.css
@@ -117,23 +117,28 @@ a.um_vijesti::after {
     display: inline-block;
 }
 
-a.um_vijesti {
+a.um_vijesti,
+.vijesti {
     color: #5D78AE;
 }
 
-a.um_registar {
+a.um_registar,
+.registar {
     color: #00827D;
 }
 
-a.um_tenderi {
+a.um_tenderi,
+.tenderi {
     color: #C88C00;
 }
 
-a.um_promo {
+a.um_promo,
+.promo {
     color: #785096;
 }
 
-a.um_forum {
+a.um_forum,
+.forum {
     color: #787878;
 }
 
@@ -204,7 +209,8 @@ a.um_forum {
 .pretraga {
     -webkit-box-shadow: none;
     box-shadow: none;
-    -webkit-transition: none;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
     border: none;
     display: inline-block;
     width: 115px;
@@ -217,7 +223,8 @@ a.um_forum {
     border-color: transparent;
     -webkit-box-shadow: none;
     box-shadow: none;
-    -webkit-transition: none;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 .pretraga::-webkit-input-placeholder,
@@ -228,7 +235,6 @@ a.um_forum {
 
 .search_bar {
     display: inline-block;
-    float: right;
     right: 70px;
     position: absolute;
     z-index: 9999;
@@ -243,7 +249,6 @@ a.um_forum {
 
 .dropdown-toggle {
     display: inline-block;
-    float: right;
     height: 70px;
     line-height: 70px;
     font-size: 20px;
@@ -280,7 +285,6 @@ a.um_forum {
     box-shadow: none;
     -webkit-box-shadow: none;
     padding: 70px 0px 20px;
-    */
 }
 
 .dropdown-menu {
@@ -302,7 +306,12 @@ a.um_forum {
     list-style: none;
 }
 
-.mega-dropdown-menu>li>ul>li>a {
+.dropdown-header>a:hover,
+.dropdown-header>a:focus{
+    color: #fff;
+    text-decoration: none;
+}
+/*.mega-dropdown-menu>li>ul>li>a {
     display: block;
     padding: 3px 20px;
     clear: both;
@@ -311,13 +320,15 @@ a.um_forum {
     color: #999;
     white-space: normal;
 }
+*/
 
-.mega-dropdown-menu>li ul>li>a:hover,
+
+/*.mega-dropdown-menu>li ul>li>a:hover,
 .mega-dropdown-menu>li ul>li>a:focus {
     text-decoration: none;
     color: #444;
     background-color: #f5f5f5;
-}
+}*/
 
 .mega-dropdown-menu .dropdown-header {
     color: #428bca;
