--- a/css/main-style.css
+++ b/css/main-style.css
@@ -463,6 +463,11 @@ a.um_forum,
     background: white;
 }
 
+.carousel-inner>.item {
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .link-novosti {
     font-family: "Raleway-Bold";
     color: black;
@@ -1149,8 +1154,6 @@ a.footer-cta-button:focus {
 
 /* sve ispod 1200px */
 
-@media (max-width: 1199px) {}
-
 @media (max-width: 991px) {
     .dropdown-toggle {
         right: initial;
@@ -1165,5 +1168,56 @@ a.footer-cta-button:focus {
     }
     .navbar-header.footer .link {
         margin-left: 10px;
+    }
+    .sub_items {
+        display: none;
+    }
+    .subheader {
+        padding-top: 5px;
+    }
+    .link-novosti {
+        white-space: nowrap;
+    }
+}
+
+@media(max-width:767px) {
+    .subheader {
+        display: none;
+    }
+    .navbar-header {
+        display: inline-block;
+    }
+    .logo-link {
+        padding-left: 15px;
+    }
+    .bijeli-menu {
+    background: transparent;
+}
+    .bijeli-menu.affix {
+        background: transparent;
+        right: 0;
+        width: 50%;
+        top: 30px;
+    }
+    .bijeli-menu.affix .dropdown-toggle {
+        color: white;
+    }
+    .bijeli-menu.affix .search-icon {
+        color: white;
+    }
+    .bijeli-menu.affix .pretraga {
+        display: none;
+    }
+    .dropdown-toggle {
+        right: 0;
+        left: initial;
+    }
+    .person-ico {
+        display: none;
+        width: 25px;
+        margin-right: 30px;
+    }
+    .bijeli-menu.affix .person-ico {
+        display: inline-block;
     }
 }
