--- a/css/main-style.css
+++ b/css/main-style.css
@@ -249,8 +249,7 @@ a.um_forum,
 }
 
 .person-ico {
-    width: 40px;
-    padding-right: 0px !important;
+    width: 50px;
 }
 
 #user_icon {
@@ -1140,6 +1139,12 @@ a.footer-cta-button:focus {
 
 .card-promo .card-count-label::before {
     background: #785096;
+}
+
+.navbar-inverse .navbar-nav>li>a:focus,
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 
