--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1588,3 +1588,58 @@ a.otvoriGaleriju:hover {
     display: inline-block;
     vertical-align: middle;
 }
+
+[data-style=mypops]+.popover {
+    background: #4194ca;
+}
+
+[data-style=mypops]+.popover.top .arrow:after {
+    border-bottom-color: #4194ca;
+}
+
+[data-style=mypops]+.popover.top .arrow:after {
+    border-top-color: #4194ca;
+}
+
+[data-style=mypops]+.popover-content {}
+
+.popovermenu {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+.popovermenu li {
+    border-bottom: none;
+    text-align: center;
+    vertical-align: middle;
+    padding: 7px 0px;
+    margin: 7px;
+}
+
+.popovermenu li:hover {
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.popovermenu li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.popovermenu li a i {
+    color: #fff;
+    font-size: 16px;
+    margin: 0 7px;
+}
+
+.popovermenu li a:hover i {
+    color: aliceblue;
+}
+
+.vijestOutreachIcon:hover {
+    box-shadow: 0px 0px 5px #23527c, inset 0px 0px 5px #23527c;
+}
+
+.popover-content {
+    padding: 5px 5px;
+}
