--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1449,6 +1449,12 @@ a.otvoriGaleriju:hover {
     background: url(../images/tenderi_head.png);
     background-size: cover;
     background-position: center center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .row-istih-visina {
@@ -1477,6 +1483,68 @@ a.otvoriGaleriju:hover {
 .card-tenderi-pretraga>div {
     align-self: center;
     padding: 0 15px;
+    border-radius: 0;
+}
+
+.tenderi-menu {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+}
+
+.tenderi-menu>li {
+    display: inline-block;
+    width: 170px;
+    min-height: 100px;
+    text-align: center;
+    padding: 30px 30px 15px;
+    background: rgba(255, 255, 255, 0.8);
+    vertical-align: bottom;
+    margin: 10px;
+    position: relative;
+    transition: all 0.3s ease-in;
+}
+
+.tenderi-menu>li>a {
+    display: inline-block;
+    vertical-align: bottom;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    padding: 15px 30px;
+    font-family: "Raleway-Bold";
+    text-transform: uppercase;
+    font-size: 15px;
+    color: black;
+}
+
+.tenderi-menu>li>a:hover {
+    text-decoration: none;
+}
+
+.tenderi-menu>li:hover {
+    background-color: #eee;
+}
+
+.tenderi-footer-cta {
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+.tenderi-tabs .nav-pills>li.active>a,
+.tenderi-tabs .nav-pills>li.active>a:focus,
+.tenderi-tabs .nav-pills>li.active>a:hover {
+    color: #fff;
+    background-color: #C88C00;
+}
+
+.tender-lista {
+    text-transform: none;
+    color: black;
+    font-size: 14px;
+    font-family: "Raleway-Bold";
 }
 
 
