--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1941,6 +1941,7 @@ i.fa.val {
     border-bottom: none;
     border-radius: 4px;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 .akordion .menu-content li a {
@@ -2024,6 +2025,13 @@ label.cek span.oznaka {
     text-transform: uppercase;
     color: white;
     background: #00B496;
+}
+
+.akordion-input {
+    margin: 10px 0;
+    padding: 7px;
+    border-radius: 4px;
+    width: 100%;
 }
 
 
