Fixe mozilla height glitch

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1756,6 +1756,7 @@ a.otvoriGaleriju:hover {
     background-position: right center;
     background-repeat: no-repeat;
     min-height: 40px;
+    height: 45px;
     display: table-cell;
     vertical-align: middle;
     padding-right: 65px;
@@ -1774,6 +1775,7 @@ a.otvoriGaleriju:hover {
     padding: 4px 7px;
     margin-bottom: 30px;
     cursor: pointer;
+    -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 
@@ -2009,6 +2011,7 @@ a.otvoriGaleriju:hover {
 .kategorija-tendera div:hover {
     background: rgb(0, 180, 150);
     color: white;
+    -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
 
