--- a/css/main-style.css
+++ b/css/main-style.css
@@ -2172,6 +2172,34 @@ label.cek span.oznaka {
     cursor: pointer;
 }
 
+.akordion>#menu-content .sub-menu {
+    padding: 10px;
+}
+
+.akordion>#menu-content .sub-menu #amount {
+    border: 0;
+    color: #f6931f;
+    font-weight: bold;
+    width: 100%;
+}
+
+.ui-slider-horizontal .ui-slider-range {
+    background: #00b496;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+    top: -9px;
+    width: 15px;
+    margin-left: -7px;
+    border-radius: 2px;
+    background: white;
+    border: 2px solid orange;
+}
+
+.ui-widget.ui-widget-content {
+    margin: 25px 0px;
+}
+
 
 /* - Responsive breakpoints - */
 
