--- a/css/main-style.css
+++ b/css/main-style.css
@@ -610,6 +610,7 @@ h1.naslov-kolone:after {
 .card-opis-vijesti {
     background: white;
     padding: 25px;
+        padding-bottom: 45px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     position: relative;
@@ -629,7 +630,13 @@ h1.naslov-kolone:after {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-
+.card-naslov-vijesti a{
+    color:#333;
+}
+.card-naslov-vijesti a:hover,.card-naslov-vijesti a:focus{
+    text-decoration:none;
+    color:#23527c;
+}
 .card-slika-vijesti {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -1117,9 +1124,11 @@ a.footer-cta-button:focus {
     list-style: none;
     overflow: auto;
     border-bottom: 1px solid #c88c00;
-    margin-bottom: 20px;
+    
 }
-
+.card-tenderi .card-opis-vijesti>li h1 {
+    margin:10px 0px;
+}
 .card-registar.card-tenderi .card-count-label::before {
     background: #c88c00;
 }
