--- a/css/main-style.css
+++ b/css/main-style.css
@@ -2234,8 +2234,48 @@ label.cek span.oznaka {
 .ui-widget.ui-widget-content {
     margin: 25px 0px;
 }
-
-
+.card.card-vijest.card-registar.card-tenderi div p.card-kategorija{
+    margin:25px 0 0;
+}
+.galerija .modal-dialog{
+    position: relative;
+    display: table;
+    overflow-y: auto;
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;
+}
+.carousel-caption{
+    display:none;
+}
+.modal-footer {
+    padding: 15px;
+    text-align: left;
+    border-top: none;
+        font-family: "Raleway-Medium",Helvetica,Arial,sans-serif;
+}
+.modal-content{
+    border-radius: 2px;
+}
+.modal-title{
+        text-align: left;
+    font-family: "Raleway-Bold",Helvetica,Arial,sans-serif;
+}
+ol#carousel-thumbs {
+    width: 100%;
+    position: relative;
+    left: 0;
+    margin: 0;
+    bottom: 0;
+}
+ol#carousel-thumbs>li {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    background-size: cover !important;
+}
+#exTabFirmeiVijesti.firmeVijesti .tabs>li>a {
+color: white;}
 /* - Responsive breakpoints - */
 
 @media (min-width:1366px) {
